syntax = "proto3";

option java_package = "com.munoon.heartbeatlive.server.messaging";

message HeartRateMessage {
  string user_id = 1;
  float heart_rate = 2;
  int64 publish_time_epoch_millis = 3;
  string publisher_id = 4;
}